added create new worksheet fields

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -6,23 +6,26 @@
 </head>
 <body>
 
+	<center><iframe src="https://giphy.com/embed/vB5jiVv1Tr2tW" width="480" height="358" frameBorder="0" class="giphy-embed"></iframe></center>
+
+	<hr width = "40%">
+
 	<form action = "login.html" method = "POST">
 		
 		<table align = "center">
 		
 			<tr>
 				<td>Username: </td>
-				<td><input type = "text" id = "username" name = "username"></td>
+				<td><input type = "text" id = "username" name = "username" required></td>
 			</tr>
 			
 			<tr>
 				<td>Password: </td>
-				<td><input type = "password" id = "password" name = "password"></td>
+				<td><input type = "password" id = "password" name = "password" required></td>
 			</tr>
 			
 			<tr>
-				<td></td>
-				<td align = "right"><input type = "submit" value = "Login"> &nbsp; <input type = "reset" value = "clear"></td>
+				<td colspan = "2" align = "right"><input type = "submit" value = "Login"> &nbsp; <input type = "reset" value = "clear"></td>
 			</tr>
 		
 		</table>
