session handling edited

--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -10,7 +10,7 @@
 
 	<hr width = "40%">
 
-	<form action = "login.html" method = "POST">
+	<form action = "loginprocess.html" method = "POST">
 		
 		<table align = "center">
 		
