--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" href="images/e.png">
 <title>Login</title>
 <!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
